# AI-Powered-DAW

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  DEMO.md  README.md
src/: CMakeLists.txt  Main.cpp
src/ai/: AgentCommandService.cpp  AgentCommandService.h  LLMProvider.cpp  LLMProvider.h
src/audio/: AudioEngine.cpp  AudioEngine.h  OfflineRenderer.cpp  OfflineRenderer.h  TrackProcessingGraph.cpp  TrackProcessingGraph.h
src/commands/: CommandExecutor.cpp  CommandExecutor.h
src/core/: DiagnosticLog.cpp  DiagnosticLog.h  Project.cpp  Project.h  ProjectFileService.cpp  ProjectFileService.h  ProjectSerializer.cpp  ProjectSerializer.h
src/ui/: ArrangementView.cpp  ArrangementView.h  AutomationLaneView.cpp  AutomationLaneView.h  InspectorPanel.cpp  InspectorPanel.h  MainComponent.cpp  MainComponent.h  MixerPanel.cpp  MixerPanel.h  PianoRollView.cpp  PianoRollView.h  TransportBar.cpp  TransportBar.h
tests/: CMakeLists.txt  ModelTests.cpp  SmokeTests.cpp
